front-envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-front-envoy
  labels:
    name: envoy-config-front-envoy
data:
  config: |-
    ---
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              generate_request_id: true
              tracing:
                operation_name: egress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: service1
                    decorator:
                      operation: checkAvailability
              http_filters:
              - name: envoy.router
                config: {}
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              generate_request_id: true
              tracing:
                operation_name: egress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route1
                virtual_hosts:
                - name: backend1
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: grpc-greeter
                    decorator:
                      operation: gRPC-call
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: service1
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: service1
            port_value: 80
      - name: grpc-greeter
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: grpc-greeter
            port_value: 80
      - name: zipkin
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: zipkin
            port_value: 9411
    tracing:
      http:
        name: envoy.zipkin
        config:
          collector_cluster: zipkin
          collector_endpoint: "/api/v1/spans"
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
