front-envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: front-envoy
  name: front-envoy
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "8001"
    port: 8001
    targetPort: 8001
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: front-envoy
status:
  loadBalancer: {}
